fixed spacing of services cards; fixed height of static-layer projects cards to 300rem

--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ header.sticky {
 /* static layer  */
 .portfolio .portfolio-content .row .static-layer {
     width: 100%;
-    height: 100%;
+    height: 30rem;
     background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
 
     border-radius: 0.8rem;
